metadata/unpackaged/objects/Release__c.object
<CustomObject>
    <fields>
        <fullName>Deployment_Date__c</fullName>
        <label>Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Notes_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release Notes Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Release_Date__c</fullName>
        <label>Target Release Date</label>
        <type>Date</type>
    </fields>
    <label>Release</label>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>